[package]
name = "dnsglobe"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Global DNS propagation checker TUI — watch a DNS record propagate across 34 public resolvers worldwide, on a world map in your terminal"
keywords = ["dns", "propagation", "tui", "terminal", "networking"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
homepage = "https://github.com/514-labs/dnsglobe"
repository = "https://github.com/514-labs/dnsglobe"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
hickory-resolver = "0.26"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
